99-deployments/manifests/pgweb/templates/pgweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /tools/pgweb/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgweb-main #-xxxx # ปิดไปก่อนเพื่อ security, ให้ลบ xxxx ออกเมื่อต้องการใช้งานจริง, ปิดเมื่อเลิกใช้ด้วยนะ
                port:
                  number: 80
